<resources>
    <string name="app_name">ESGI hairdresser</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Bonjour %1$s</string>
    <string name="name">Nom</string>
    <string name="hairdresser">Coiffeur</string>
    <string name="date">Date</string>
    <string name="time">Heure</string>
    <string name="add_appointment">Prendre un rendez vous</string>
    <string name="add">Ajouter</string>
    <string name="error_set_value">Merci de compléter le champ</string>
    <string name="error_occured">Une erreur est survenue</string>
    <string name="error_db_save">L\'ajout des données à échoué</string>
    <string name="error_date_format">Le format de date est incorrect</string>
    <string name="error_shop_close">Le salon est fermé à cet horaire</string>
    <string name="error_future_date">Merci de sélectioner une date future</string>
    <string name="appointment_add">Votre rendez vous à été ajouté</string>
    <string name="dateFormat">%1$02d/%2$02d/%3$04d</string>
    <string name="timeFormat">%1$02d:%2$02d</string>
    <string name="remember_me">Se souvenir de moi</string>
    <string name="register">S\'enregister</string>
    <string name="next_appointment">Mes prochains rendez vous</string>
    <string name="no_element">Aucun element</string>
    <string name="ability">Prestations</string>
    <string name="price_euro">%1$s €</string>
    <string name="home">Accueil</string>
    <string name="appointment">Rendez-vous</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="hairdresserName">Nom du coiffeur : </string>
    <string name="dateHair">Date : </string>
    <string name="mon_prochain_rendez_vous">Mon prochain rendez-vous</string>
</resources>
